# cpplumber

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  _config.yml  index.md
.github/workflows/: build.yml  clippy.yml  rustfmt.yml  tarpaulin.yml  tests.yml
src/: cli.rs  compilation_db.rs  information_leak.rs  main.rs  reporting.rs  suppressions.rs
src/compilation_database/: compile_commands.rs  file_list.rs  mod.rs
src/information_leak/: confirmed_leak.rs  leak_location.rs  mod.rs  potential_leak.rs
tests/data/compile_commands/: db1.json  invalid.json
tests/data/main/file_list_proj/: a.out  header.h  main.cc
tests/data/suppressions/: files_and_artifacts.yml
