[package]
name = "cpplumber"
version = "0.1.0"
edition = "2021"

[dependencies]
clang = { version = "2.0", features = ["clang_10_0"] }
anyhow = "1.0"
structopt = "0.3"
widestring = "1.0"
log = "0.4"
env_logger = "0.9"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.3"
